feat:  cusine btn css changes

--- a/src/index.css
+++ b/src/index.css
@@ -219,7 +219,7 @@ body::-webkit-scrollbar {
 
 .btn:hover {
   background: linear-gradient(45deg, #ff6347, #ff4500);
-  border-color: #ff4500;
+  border: none;
   color: #fff;
   transform: translateY(-2px);
   box-shadow: 0 4px 15px rgba(255, 99, 71, 0.4);
@@ -227,7 +227,7 @@ body::-webkit-scrollbar {
 
 .btn.active {
   background: linear-gradient(45deg, #ff6347, #ff4500);
-  border-color: #ff4500;
+  border: none;
   color: #fff;
   box-shadow: 0 4px 15px rgba(255, 99, 71, 0.4);
   transform: translateY(-1px);
